<resources>
    <string name="app_name">SmartLock</string>

    <string name="app_notification_channel_id">smartlock_channel_01</string>
    <string name="app_notification_channel_title">General</string>

    <!--commons-->
    <string name="accept">Aceptar</string>
    <string name="publisher_error">Error al iniciar el publisher.</string>
    <string name="client_error">Ups! Hubo un problema con el cliente. Verifique su conexión de internet.</string>

    <string name="notifications">Notificaciones</string>
    <string name="notifications_description_warning">Habilite las notificaciones de la app para ser advertido cuando la puerta quedó mucho tiempo abierta.</string>
    <string name="notifications_description_warning_channel">Habilite el canal general de la app para ser advertido cuando la puerta quedó mucho tiempo abierta.</string>
    <string name="notifications_description">Se le notificará cuando la puerta haya estado demasiado tiempo abierta.</string>
    <string name="notify_opened_door_title">Puerta abierta</string>
    <string name="notify_opened_door_description">La puerta ha estado abierta por mucho tiempo.</string>
    <string name="service_notification_title">Conectado a Smartlock</string>
    <string name="service_notification_body">Será notificado ante imprevistos</string>
    <string name="service_notification_cancel">Desconectar</string>

    <string name="door_status">Estado de la puerta</string>
    <string name="door_status_description">Vea en tiempo real cuando la puerta se cierra y abre.</string>
    <string name="door_status_open_description">Se abrió la puerta</string>
    <string name="door_status_closed_description">Se cerró la puerta</string>
    <string name="door_status_init_description"><i>Escuchando...</i></string>

    <string name="change_password">Cambiar clave</string>
    <string name="change_password_description">Asigna una nueva clave de acceso a Smartlock.</string>
    <string name="change_password_full_description">Ingrese una nueva clave de acceso. Debe ser numérica de hasta 16 dígitos.</string>
    <string name="password_hint">1234</string>
    <string name="save">Guardar</string>
    <string name="save_password_success">La clave fue cambiada.</string>
    <string name="save_password_error">Hubo un error y no se pudo actualizar la clave.</string>

    <string name="shake">Shake</string>
    <string name="shake_description">Desbloquee la puerta agitando el celular.</string>

    <string name="unlock_success">¡Puerta desbloqueada!</string>
    <string name="unlock_error">Hubo un error. No fue posible desbloquear la puerta.</string>
    <string name="shake_to_unlock">Agite para desbloquear la puerta!</string>
    <string name="home">Inicio</string>
    <string name="retry">Reintentar</string>
</resources>