<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimaryInverse">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_app"
        android:layout_marginVertical="@dimen/margin_app"
        android:gravity="center"
        android:text="@string/unlock_success"
        android:textColor="?colorPrimary"
        android:textSize="@dimen/x_large_text_size"
        app:layout_constraintBottom_toTopOf="@id/ivDoor"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <ImageView
        android:id="@+id/ivDoor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_app"
        android:adjustViewBounds="true"
        android:contentDescription="@null"
        android:src="@drawable/img_door"
        app:layout_constraintBottom_toTopOf="@id/btnHome"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintWidth_max="240dp" />

    <Button
        android:id="@+id/btnHome"
        style="@style/AppButtonActionStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_app"
        android:layout_marginVertical="@dimen/margin_app"
        android:text="@string/home"
        app:layout_constraintBottom_toTopOf="@id/btnRetry"
        app:layout_constraintTop_toBottomOf="@id/ivDoor" />

    <Button
        android:id="@+id/btnRetry"
        style="@style/AppButtonActionStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_app"
        android:text="@string/retry"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnHome" />

</androidx.constraintlayout.widget.ConstraintLayout>